# crewai-keboola-agent-workflow

./: .gitignore  README.md  build.sh  main.py  orchestrator.py  pyproject.toml  requirements.txt  test_export.csv
.github/actions/kickoff-agent/: action.yml
.github/workflows/: main.yml
api_wrapper/: __init__.py  api_client.py  api_wrapper.py
crewai_app/: __init__.py  local-run.py  main.py  orchestrator.py  tasks.py  tools.py
simple_extract_calculation_notification/: crew.py  main.py  tools.py
simple_extract_calculation_notification/config/: agents.yaml  tasks.yaml
src/: __init__.py  agents.py  crew_base.py  main.py  tasks.py  tools.py  utils.py
